2016-12-19 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/mbrlen.c,
	  support/regression/tests/wchar.c:
	  Fix bug #2566.

2016-12-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  Save space by omitting an unused part of the interrupt table.

2016-12-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/peeph.def:
	  Minor code improvements, mostly for bit-fields.

2016-12-12 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Document STM8 trap handler syntax.

2016-12-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c
	* src/SDCCerr.c
	  Fix incorrect error messages.

2016-11-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/wchar.h,
	  device/lib/btowc.c,
	  device/lib/incl.mk,
	  device/lib/mbrlen.c,
	  device/lib/mbstowcs.c,
	  device/lib/wcscmp.c,
	  device/lib/wcstombs.c,
	  device/lib/wctob.c,
	  device/lib/wcslen.c,
	  support/regression/tests/string.c,
	  support/regression/tests/wchar.c:
	  Improvements and fixes in wide character library support.

2016-11-26 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdlib.h,
	  device/lib/incl.mk,
	  device/lib/mbstowcs.c,
	  device/lib/wcstombs.c,
	 .version:
	  Multibyte/wide string conversion functions.
	* src/stm8/gen.c:
	  Optimize comparisons with (partial) 1 and -1.

2016-11-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  src/SDCClospre.hpp:
	  More fine-grained handling of volatile to allow more optimizations in lospre.

2016-11-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/z80/ralloc.c:
	  Fix some comments on spilling.
	* support/regression/tests/bug-2559.c

2016-11-07 Philipp Klaus Krause <pkk AT spth.de>

	* configure.ac,
	  configure,
	  src/SDCCasm.c,
	  src/SDCCasm.h,
	  src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/port.h,
	  src/xa51,
	  support/regression/ports/xa51,
	  support/regression/Makefile.in:
	  Kill incomplete, unmaintained xa51 backend.
